--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ highlighter: pygments
 permalink: /posts/:title.html
 excerpt_separator: "<!-- more -->"
 
-github: panxw
-author: "潘学文"
-email: winfirm#163.com
-name: "潘学文个人博客"
+github: XuChengshan
+author: "徐成山"
+email: 2630517357@qq.com
+name: "徐成山个人博客"
 url: http://www.panxw.com
 domain: www.panxw.com
 all_categories: [
