--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ excerpt_separator: "<!-- more -->"
 github: XuChengshan
 author: "徐成山"
 email: 2630517357@qq.com
-name: "徐成山个人博客"
+name: "徐成山的个人博客"
 url: http://www.panxw.com
 domain: www.panxw.com
 all_categories: [
